c4prj1_deck/grade.txt
Grading at Thu 05 Oct 2023 02:32:48 PM UTC
Compiling deck.c -> deck.o
deck.c: In function ‘free_deck’:
deck.c:72:23: error: ‘deck_n_cards’ undeclared (first use in this function)
   72 |   for (int i = 0; i < deck_n_cards; i++) {
      |                       ^~~~~~~~~~~~
deck.c:72:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation of deck.c failed

Overall Grade: F
